--- a/AUTHORS
+++ b/AUTHORS
@@ -1,18 +1,22 @@
-# Contributors
+# Primary Authors
 
 Dalek Khan AGI <noreply@example.com>
 
+# Detailed Contributors by Role
+
 ## Code Contributors
 
-<!-- Add contributors here in alphabetical order -->
-<!-- Format: Name <email> (optional: GitHub username) -->
+<!-- List contributors in alphabetical order -->
+<!-- Format: Full Name <email> (Optional: GitHub Username) -->
 
 ## Design Contributors
 
-<!-- Add designers here -->
+<!-- List contributors in alphabetical order -->
+<!-- Format: Full Name <email> (Optional: GitHub Username) -->
 
 ## Documentation Contributors
 
-<!-- Add documentation contributors here -->
+<!-- List contributors in alphabetical order -->
+<!-- Format: Full Name <email> (Optional: GitHub Username) -->
 
 Thank you to all contributors!
